Fix borders not showing

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,6 @@ a:hover {
 
 .header-anchors {
   /* width: 400px; */
-
   display: flex;
   padding: 15px 100px;
   margin-top: 20px;
@@ -93,6 +92,7 @@ a:hover {
 /*======================================
     ENGAGING BOX
 ========================================*/
+
 .engaging-box-wrapper {
   background-color: #bda0c3;
   /* border-style: ridge; */
@@ -110,6 +110,7 @@ a:hover {
 /*======================================
     QUESTION BOX
 ========================================*/
+
 .question-box {
   display: grid;
   grid-template-rows: auto auto;
@@ -133,6 +134,7 @@ a:hover {
   cursor: pointer;
   border: 0;
   border-radius: 5px;
+  border-style: solid;
 }
 
 .answer-button.border-correct {
